# trade-coach

./: .env.example  .gitignore  CLAUDE.md  FUTURE_ROADMAP.md  NEXT_BRANCH_PLAN.md  ONBOARDING.md  README.md  TRADECOACH_AGENT_OVERVIEW.md  config.py  db.py  final_notebook.ipynb  graph.py  main.ipynb  main_v2.ipynb  pyproject.toml  sample_trades.json  streamlit_app.py  trade-coach.code-workspace
.ipynb_checkpoints/: main-checkpoint.ipynb
docs/: 01_LangGraph_상세_노드_설계서_v1.2.docx  01_LangGraph_상세_노드_설계서_v2.0.docx  02_MVP_UI_UX_설계서_v1.1.docx  02_MVP_UI_UX_설계서_v2.0.docx  03_MVP_설계서_v1.1.docx  03_MVP_설계서_v2.0.docx  03_MVP_설계서_v2.1.docx  04_MVP_API_명세서_v1.2.docx  04_MVP_API_명세서_v2.0.docx  04_MVP_API_명세서_v2.1.docx  05_MVP_DB_스키마_설계서_v1.1.docx  05_MVP_DB_스키마_설계서_v2.0.docx  05_MVP_DB_스키마_설계서_v2.1.docx  06_배포후_최소회귀_테스트_체크리스트_v0.1.docx  06_배포후_최소회귀_테스트_체크리스트_v0.2.docx  06_배포후_최소회귀_테스트_체크리스트_v0.3.docx  07_개발보고서_2026-05-06_프로덕션운영중.docx  07_개발보고서_v2.0.docx  08_MVP_계획서_v1.2.docx  08_MVP_계획서_v2.0.docx  09_프로젝트_작업_지침_v1.2.docx  09_프로젝트_작업_지침_v2.0.docx
nodes/: analysis_nodes.py  chart_nodes.py  coaching_nodes.py  fallback_node.py  fetch_nodes.py  journal_nodes.py  memory_nodes.py  performance_nodes.py  preprocess_nodes.py  quiz_nodes.py
tools/: __init__.py  concept_tool.py  ict_concepts.json
